RESOLVED FIXED159706
CLoop buildfix after r203142
https://bugs.webkit.org/show_bug.cgi?id=159706
Summary CLoop buildfix after r203142
Csaba Osztrogonác
Reported 2016-07-13 03:01:41 PDT
http://trac.webkit.org/r203142 broke the CLoop buildfix and http://trac.webkit.org/r203144 didn't fix it. C loop is still broken: Source/JavaScriptCore/CMakeFiles/LLIntOffsetsExtractor.dir/llint/LLIntOffsetsExtractor.cpp.o:LLIntOffsetsExtractor.cpp:function JSC::CLoopStack::isSafeToRecurse() const: error: undefined reference to 'JSC::ExecState::topOfFrameInternal()' collect2: error: ld returned 1 exit status JSC::CLoopStack::isSafeToRecurse() can't be inlined because of this build failure,let's move it to CLoopStack.cpp instead of CLoopStackInlines.h. (Feel free to fix it yourself, if you know a better fix for it.)
Attachments
Patch for landing (2.81 KB, patch)
2016-07-13 03:03 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2016-07-13 03:03:01 PDT
Created attachment 283500 [details] Patch for landing
WebKit Commit Bot
Comment 2 2016-07-13 03:23:19 PDT
Comment on attachment 283500 [details] Patch for landing Clearing flags on attachment: 283500 Committed r203156: <http://trac.webkit.org/changeset/203156>
WebKit Commit Bot
Comment 3 2016-07-13 03:23:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.