CLoop buildfix after r203142 https://bugs.webkit.org/show_bug.cgi?id=159706

Unreviewed buildfix.


* interpreter/CLoopStack.cpp:
(JSC::CLoopStack::isSafeToRecurse):
* interpreter/CLoopStack.h:
* interpreter/CLoopStackInlines.h:
(JSC::CLoopStack::isSafeToRecurse): Deleted.


Canonical link: https://commits.webkit.org/177856@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203156 268f45cc-cd09-0410-ab3c-d52691b4dbfc