Source/JavaScriptCore/interpreter/CLoopStackInlines.h
@@ -42,12 +42,6 @@ inline bool CLoopStack::ensureCapacityFor(Register* newTopOfStack)
     return grow(newTopOfStack);
 }
 
-bool CLoopStack::isSafeToRecurse() const
-{
-    void* reservationLimit = reinterpret_cast<int8_t*>(reservationTop() + m_softReservedZoneSizeInRegisters);
-    return !m_topCallFrame || (m_topCallFrame->topOfFrame() > reservationLimit);
-}
-
 inline Register* CLoopStack::topOfFrameFor(CallFrame* frame)
 {
     if (UNLIKELY(!frame))
